[gd_scene load_steps=11 format=3 uid="uid://vtl7tqxqrbne"]

[ext_resource type="Script" uid="uid://x56r0xmeau34" path="res://core/ui/menus/network_menu.gd" id="1_h2wjs"]
[ext_resource type="Script" uid="uid://do1845tkjuib" path="res://core/systems/state/state_watcher.gd" id="2_lyt35"]
[ext_resource type="Resource" uid="uid://ddxaxt8uict66" path="res://core/ui/menus/network_state.tres" id="3_lyt35"]
[ext_resource type="Script" uid="uid://cnguxa72sjiij" path="res://core/systems/effects/fade_effect.gd" id="4_u8jw3"]
[ext_resource type="Script" uid="uid://op6hhnff7x1j" path="res://core/systems/effects/slide_effect.gd" id="5_u4sfq"]
[ext_resource type="Script" uid="uid://dv60h3e8rx0qk" path="res://core/systems/focus/focus_grabber.gd" id="6_pqasm"]
[ext_resource type="Script" uid="uid://dy4e02vwc7l86" path="res://core/ui/components/wifi_network_tree.gd" id="7_r6xng"]
[ext_resource type="Script" uid="uid://c0gysp8leikk8" path="res://core/systems/state/state_updater.gd" id="8_pqasm"]
[ext_resource type="Resource" uid="uid://721852jedisx" path="res://core/ui/menus/global_state_machine.tres" id="9_u15i2"]
[ext_resource type="Resource" uid="uid://d4crgebnxwgrx" path="res://core/ui/menus/disk_select_state.tres" id="10_nxy5c"]

[node name="NetworkMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2wjs")

[node name="StateWatcher" type="Node" parent="."]
script = ExtResource("2_lyt35")
state = ExtResource("3_lyt35")
metadata/_custom_type_script = "uid://do1845tkjuib"

[node name="FadeEffect" type="Node" parent="StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("4_u8jw3")
target = NodePath("../..")
fade_speed = 0.7
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"
on_signal = "state_entered"
metadata/_custom_type_script = "uid://cnguxa72sjiij"

[node name="SlideEffect" type="Node" parent="StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("5_u4sfq")
target = NodePath("../../MarginContainer")
slide_speed = 0.4
margin = 0
on_signal = "state_entered"
slide_out_signal = "state_exited"
on_signal = "state_entered"
on_signal = "state_entered"
metadata/_custom_type_script = "uid://op6hhnff7x1j"

[node name="FocusGrabber" type="Node" parent="StateWatcher/SlideEffect" node_paths=PackedStringArray("target")]
script = ExtResource("6_pqasm")
target = NodePath("../../../MarginContainer/VBoxContainer/NextButton")
on_signal = "effect_finished"
metadata/_custom_type_script = "uid://dv60h3e8rx0qk"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Network is not connected"

[node name="WifiNetworkTree" type="Tree" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_r6xng")
metadata/_custom_type_script = "uid://dy4e02vwc7l86"

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Next"

[node name="StateUpdater" type="Node" parent="MarginContainer/VBoxContainer/NextButton"]
script = ExtResource("8_pqasm")
state_machine = ExtResource("9_u15i2")
state = ExtResource("10_nxy5c")
on_signal = "button_up"
metadata/_custom_type_script = "uid://c0gysp8leikk8"
